<resources>
    <string name="app_name">Catatanku</string>
    <string name="title">Judul</string>
    <string name="note_content">Isi Catatan</string>
    <string name="save_button">Simpan</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Masuk</string>
    <string name="register_button">Daftar</string>
    <string name="back_button">Kembali</string>
    <string name="email">Email</string>
    <string name="name">Nama Lengkap</string>
    <string name="school">Asal Sekolah</string>
    <string name="address">Alamat</string>
    <string name="logout">Keluar</string>
    <string name="register_form">Pendaftaran</string>
</resources>
