<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="32sp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/titleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32sp"
            android:text="@string/note_content"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/noteInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8sp"
            android:layout_weight="1"
            android:background="@color/material_dynamic_neutral95"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="24"
            android:padding="8sp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32sp"
            android:text="@string/save_button" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorButtonNormal"
            android:text="@string/back_button"
            android:textColor="?attr/colorPrimaryDark" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
